--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    implementation 'com.google.android.material:material:1.4.0'
+
     // Fragment
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
