--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 
     testImplementation 'junit:junit:4.13.2'
