--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     // Fragment
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
