--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
+
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
