--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
