--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
