Efecto shimmer de carga de datos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -70,6 +73,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
