--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".menus.ListReviewsAvtivity"
+            android:name=".menus.ListReviewsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
